--- a/FileManagerTwo/Controls/FileBrowserModuleControl.xaml
+++ b/FileManagerTwo/Controls/FileBrowserModuleControl.xaml
@@ -9,13 +9,16 @@
     <!-- Main border around file browser module -->
     <Border x:Name="FileBrowserBorder"
             BorderThickness="0" 
-            Margin="5">
+            Margin="5,1,5,1">
 
         <!--#region  MAIN GRID DEFINITIONS -->      
         <Grid>
             <Grid.RowDefinitions>
 
-                <!-- Drives list and drive info -->
+                <!-- Drives list -->
+                <RowDefinition Height="auto"/>
+
+                <!-- Drive info -->
                 <RowDefinition Height="auto"/>
 
                 <!-- Active directory info display -->
@@ -33,14 +36,14 @@
             
             
             <!--#region  DRIVES SECTION-->      
-            <Grid Grid.Row="0">
+            
                 
-                <Grid.ColumnDefinitions>
+                <!--<Grid.ColumnDefinitions>
 
-                    <!-- Drives list -->
+                    --><!-- Drives list --><!--
                     <ColumnDefinition Width="3*"/>
 
-                    <!-- Selected drives info -->
+                    --><!-- Selected drives info --><!--
                     <ColumnDefinition Width="*"/>
 
                 </Grid.ColumnDefinitions>
@@ -48,11 +51,11 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
+                </Grid.RowDefinitions>-->
                 
 
                 <!-- DRIVES LIST listbox-->
-                <ListBox Grid.Column="0" 
+                <ListBox  
                          Grid.Row="0"
                          x:Name="drivesList"
                          Style="{StaticResource DrivesListboxStyle}"
@@ -62,53 +65,62 @@
                          />
 
                 <!-- SELECTED drive info-->
-                <Border Grid.Column="1" Grid.Row="0" Grid.RowSpan="2"
-                        BorderBrush="LightPink"
-                        BorderThickness="1"
-                        Margin="3">
 
-                    <StackPanel>
-                        <!-- Volume label -->
-                        <TextBlock Style="{StaticResource InfoTextblock}"
-                                   Text="{Binding SelectedDrive.VolumeLabel}"
-                                   Background="DarkOrchid"
-                                   />
-
-                        <!-- Drive format-->
-                        <TextBlock Style="{StaticResource InfoTextblock}"
-                                   Text="{Binding SelectedDrive.DriveFormat}"
-                                   Background="CadetBlue"
-                                   />
-
-                        <!-- Total size-->
-                        <TextBlock Style="{StaticResource InfoTextblock}"
-                                   Text="{Binding SelectedDrive.SizeInfo}"
-                                   Background="DarkGoldenrod"
-                                   />
-
-                        <!-- Size bar -->
-                        <ProgressBar Orientation="Horizontal" 
+            <StackPanel Grid.Row="1">
+                <TextBlock 
+                           Style="{StaticResource InfoTextblock}"
+                           Text="{Binding SelectedDrive.CombineInfo}"
+                           />
+                <ProgressBar Orientation="Horizontal" 
                                      HorizontalAlignment="Stretch"
                                      MinWidth="100"
                                      Margin="5"
                                      Height="3"
                                      Value="{Binding SelectedDrive.Percentage, Mode=OneWay}"
                                      />
-                    </StackPanel>
-                </Border>
-            </Grid>
+            </StackPanel>
+                
+
+            <!--<StackPanel>
+                        --><!-- Volume label --><!--
+                        <TextBlock Style="{StaticResource InfoTextblock}"
+                                   Text="{Binding SelectedDrive.VolumeLabel}"
+                                   Background="DarkOrchid"
+                                   />
+
+                        --><!-- Drive format--><!--
+                        <TextBlock Style="{StaticResource InfoTextblock}"
+                                   Text="{Binding SelectedDrive.DriveFormat}"
+                                   Background="CadetBlue"
+                                   />
+
+                        --><!-- Total size--><!--
+                        <TextBlock Style="{StaticResource InfoTextblock}"
+                                   Text="{Binding SelectedDrive.SizeInfo}"
+                                   Background="DarkGoldenrod"
+                                   />
+
+                        --><!-- Size bar --><!--
+                        
+                    </StackPanel>-->
+                
+            
 
             <!--#endregion-->
 
             <!--#region DIRECTORY CONTENT -->          
             <!-- Full path-->
-            <TextBlock Grid.Row="1"
+
+            <TextBlock Grid.Row="2"
                        Style="{StaticResource InfoTextblock}"
-                       Text="{Binding SelectedDrive.Directory.FullPath}"                     
+                       Text="{Binding SelectedDrive.Directory.FullPath}"
+                       FontSize="14"
+                       Margin="2"
+                       
                        />
             
             <!-- Items listbox-->
-            <ListBox Grid.Row="2"
+            <ListBox Grid.Row="3"
                      x:Name="activeDirectoryListbox"
                      Style="{StaticResource DirectoryDisplayListboxStyle}"
                      ItemsSource="{Binding SelectedDrive.Directory.Items}"
