--- a/FileManagerTwo/Styles/Listbox.xaml
+++ b/FileManagerTwo/Styles/Listbox.xaml
@@ -6,6 +6,7 @@
     <Style TargetType="{x:Type ListBox}" x:Key="DrivesListboxStyle">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="BorderBrush" Value="Red"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Visible"/>
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Disabled"/>
         <Setter Property="ItemsPanel">
@@ -15,16 +16,6 @@
                 </ItemsPanelTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
-   
-    <!-- DIRECTORY listbox-->
-    <Style TargetType="{x:Type ListBox}" x:Key="DirectoryDisplayListboxStyle">
-        <Setter Property="Background" Value="{StaticResource BackgroundMainBrush}"/>
-        <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Margin" Value="0"/>
-        <Setter Property="VerticalAlignment" Value="Top"/>
-        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
-        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Visible"/>
     </Style>
 
     <!-- Drive ITEM style -->
@@ -56,9 +47,9 @@
                     <Border x:Name="border"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             Background="{TemplateBinding Background}"
-                            BorderThickness="2"
-                            Margin="1"
-                            Padding="2,0,2,1">
+                            BorderThickness="1"
+                            Margin="0"
+                            Padding="3">
 
                         <local:DriveItemControl/>
 
@@ -96,6 +87,16 @@
             </Setter.Value>
         </Setter>
 
+    </Style>
+    
+    <!-- DIRECTORY listbox-->
+    <Style TargetType="{x:Type ListBox}" x:Key="DirectoryDisplayListboxStyle">
+        <Setter Property="Background" Value="{StaticResource BackgroundMainBrush}"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Margin" Value="0"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
+        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Visible"/>
     </Style>
 
     <!-- File ITEM style -->
